FileSystems use URIs now instead of URLs (refactoring) to support VFS and sftp, etc.
git-svn-id: https://svn.code.sf.net/p/autoplot/code/autoplot/trunk@3037 0c594bb0-8543-0410-a25e-d8ec440261db